syntax = "proto3";

package pb;

option go_package = "./pb";

service Video {
  rpc GetVideoList (GetVideoListReq) returns (GetVideoListResp);
  rpc GetVideoDetail (GetVideoDetailReq) returns (GetVideoDetailResp);
  rpc UploadVideo (UploadVideoReq) returns (UploadVideoResp);
  rpc DeleteVideo (DeleteVideoReq) returns (DeleteVideoResp);
  rpc LikeVideo (LikeVideoReq) returns (LikeVideoResp);
  rpc UnlikeVideo (UnlikeVideoReq) returns (UnlikeVideoResp);
  rpc DislikeVideo (DislikeVideoReq) returns (DislikeVideoResp);
  rpc UndislikeVideo (UndislikeVideoReq) returns (UndislikeVideoResp);
  rpc GetBarrageList (GetBarrageListReq) returns (GetBarrageListResp);
  rpc GetHotVideoList (GetHotVideoListReq) returns (GetHotVideoListResp);
  rpc IsExistVideo (IsExistVideoReq) returns (IsExistVideoResp);
}

message VideoInfo {
  int64 video_id = 1;
  string title = 2;
  string url = 3;
  int64 user_id = 4;
  string user_nickname = 5;
  string description = 6;
  int64 like_count = 7;
  int64 dislike_count = 8;
  string create_time = 9;
  string update_time = 10;
}
message GetVideoListReq {
  int64 page = 1;
  int64 page_size = 2;
  string keyword = 3;
}
message GetVideoListResp {
  repeated VideoInfo video_list = 1;
}

message GetVideoDetailReq {
  int64 video_id = 1;
}
message GetVideoDetailResp {
  VideoInfo video = 1;
}

message BarrageInfo {
  int64 barrage_id = 1;
  int64 user_id = 2;
  string user_nickname = 3;
  string text = 4;
  int64 color = 5;
  int64 type = 6;
  int64 timestamp = 7;
}
message GetBarrageListReq {
  int64 video_id = 1;
}
message GetBarrageListResp {
  repeated BarrageInfo barrage_list = 1;
}

message UploadVideoReq {
  int64 user_id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
}
message UploadVideoResp {
  bool success = 1;
}

message DeleteVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}
message DeleteVideoResp {
  bool success = 1;
  string url = 2;
}

message LikeVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}
message LikeVideoResp {
  bool success = 1;
}

message UnlikeVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}
message UnlikeVideoResp {
  bool success = 1;
}

message DislikeVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}
message DislikeVideoResp {
  bool success = 1;
}

message UndislikeVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
}
message UndislikeVideoResp {
  bool success = 1;
}

message HotVideoInfo {
  int64 video_id = 1;
  string title = 2;
  string url = 3;
  int64 user_id = 4;
  string user_nickname = 5;
  string description = 6;
  int64 like_count = 7;
  int64 dislike_count = 8;
  string create_time = 9;
  string update_time = 10;
  int64 hot_index = 11;
}

message GetHotVideoListReq {}
message GetHotVideoListResp {
  repeated HotVideoInfo hot_video_list = 1;
}

message IsExistVideoReq {
  int64 video_id = 1;
}
message IsExistVideoResp {
  bool exists = 1;
}